--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.jpa.database-platform=ntnu.appdev.jdbcconnection.SQLiteConfigs.SQLDialect
+spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.url=jdbc:sqlite:empty_db.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+
+spring.jpa.show-sql=true
